# bazel_remap_main_repo

./: BUILD.bazel  README.md  WORKSPACE  def.bzl  deps.bzl  x_sdk.BUILD.bazel
